grammar.js
    source_file: $ => repeat($._record),

    _record: $ => choice(
      $.problem_record,
      $.input_record,
      $.data_record,
      $.subroutines_record,
      $.model_record,
      $.pk_record,
      $.des_record,
      $.error_record,
      $.pred_record,
      $.theta_record,
      $.omega_record,
      $.sigma_record,
      $.estimation_record,
      $.covariance_record,
      $.table_record,
      $.simulation_record,
      $.abbreviated_record,
      $.sizes_record,
      $.mix_record,
      $.msfi_record,
      $.nonparametric_record,
      $.prior_record,
      $.thetap_record,
      $.thetapv_record,
      $.omegap_record,
      $.omegapd_record,
      $.sigmap_record,
      $.sigmapd_record,
      $.scatter_record,
    ),

    subroutines_record: $ => seq(
      alias(recordKeyword('SUB', 'SUBR', 'SUBS', 'SUBROUTINE', 'SUBROUTINES'), $.record_keyword),
      repeat($._subroutines_option),
    ),

    _subroutines_option: $ => choice(
      $.advan_option,
      $.trans_option,
      $.tol_option,
    ),

    advan_option: $ => choice(
      /ADVAN\d+/i,
      seq(/ADVAN/i, '=', field('number', $.integer)),
    ),
    trans_option: $ => choice(
      /TRANS\d+/i,
      seq(/TRANS/i, '=', field('number', $.integer)),
    ),
    tol_option: $ => seq(alias(/TOL/i, $.option_name), optional('='), $.integer),

    model_record: $ => seq(
      alias(recordKeyword('MOD', 'MODEL'), $.record_keyword),
      repeat($._model_option),
    ),

    _model_option: $ => choice(
      $.comp_def,
      $.ncomp_option,
    ),

    comp_def: $ => seq(
      alias(/COMP(ARTMENT)?/i, $.option_name),
      optional('='),
      choice(
        seq('(', field('name', $.identifier), repeat(seq(optional(','), $.comp_option)), ')'),
        field('name', $.identifier),
      ),
    ),

    comp_option: $ => choice(
      /DEFDOSE/i,
      /DEFOBS/i,
      /DEFOBSERVATION/i,
      /NODOSE/i,
      /INITIALOFF/i,
      /NOOFF/i,
    ),
    ncomp_option: $ => seq(alias(/NCOMP(ARTMENTS)?/i, $.option_name), optional('='), $.integer),

    pk_record: $ => seq(
      alias(recordKeyword('PK'), $.record_keyword),
      optional($.record_options),
      repeat($._statement),
    ),

    record_options: $ => seq(
      '(',
      repeat1($._record_option_item),
      ')'
    ),

    _record_option_item: $ => choice(
      $.option_setting,
      ',',
      $.identifier,
    ),

    option_setting: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', choice($.number, $.integer, $.identifier)),
    ),

    error_record: $ => seq(
      alias(recordKeyword('ERR', 'ERRO', 'ERROR'), $.record_keyword),
      optional($.record_options),
      repeat($._statement),
    ),

    _statement: $ => choice(
      $.assignment,
      $.if_statement,
      $.block_if,
      $.do_loop,
      $.do_while_loop,
      $.exit_statement,
      $.call_statement,
      $.fortran_line,
    ),

    statement_block: $ => repeat1($._statement),

    do_while_loop: $ => seq(
      alias(/DO/i, $.keyword),
      alias(/WHILE/i, $.keyword),
      '(',
      field('condition', $._expression),
      ')',
      field('body', $.statement_block),
      alias(/END\s*DO/i, $.keyword),
    ),

    argument_list: $ => seq($._expression, repeat(seq(',', $._expression))),

    exit_statement: $ => seq(
      alias(/EXIT/i, $.keyword),
      optional(seq(field('code', $.integer), optional(field('level', $.integer)))),
    ),

    assignment: $ => seq(
      field('target', choice($.identifier, $.indexed_access)),
      '=',
      field('value', $._expression),
    ),

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.parenthesized_expression,
      $.function_call,
      $.theta_ref,
      $.eta_ref,
      $.err_ref,
      $.eps_ref,
      $.indexed_access,
      $.identifier,
      $.number,
    ),

    binary_expression: $ => choice(
      // Exponentiation (highest, right-associative)
      prec.right(4, seq(field('left', $._expression), field('operator', alias('**', $.arithmetic_operator)), field('right', $._expression))),
      // Multiplication/Division
      prec.left(3, seq(field('left', $._expression), field('operator', alias('*', $.arithmetic_operator)), field('right', $._expression))),
      prec.left(3, seq(field('left', $._expression), field('operator', alias('/', $.arithmetic_operator)), field('right', $._expression))),
      // Addition/Subtraction
      prec.left(2, seq(field('left', $._expression), field('operator', alias('+', $.arithmetic_operator)), field('right', $._expression))),
      prec.left(2, seq(field('left', $._expression), field('operator', alias('-', $.arithmetic_operator)), field('right', $._expression))),
      // Comparisons (Fortran and C-style)
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.EQ\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.NE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.GT\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.LT\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.GE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.LE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('==', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('/=', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('>', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('<', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('>=', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('<=', $.comparison_operator)), field('right', $._expression))),
      // Logical (lowest)
      prec.left(0, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.AND\./i)), $.logical_operator)), field('right', $._expression))),
      prec.left(0, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.OR\./i)), $.logical_operator)), field('right', $._expression))),
    ),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    // External scanner handles function_name with lookahead for (
    // This allows SIN(x) as function_call but SIN alone as identifier
    function_call: $ => seq(
      field('name', $.function_name),
      '(',
      optional(field('arguments', $.argument_list)),
      ')',
    ),

    theta_ref: $ => seq(/THETA/i, '(', field('index', choice($.integer, $.identifier)), ')'),
    eta_ref: $ => seq(/ETA/i, '(', field('index', choice($.integer, $.identifier)), ')'),
    err_ref: $ => seq(/ERR/i, '(', field('index', choice($.integer, $.identifier)), ')'),
    theta_record: $ => seq(
      alias(recordKeyword('THE', 'THET', 'THTA', 'THETA'), $.record_keyword),
      repeat($.theta_init),
    ),

    theta_init: $ => seq(
      field('value', choice($.number, $.theta_bounds)),
      optional(field('fixed', $.fix_option)),
    ),

    omega_record: $ => seq(
      alias(recordKeyword('OME', 'OMEG', 'OMEGA'), $.record_keyword),
      repeat($._omega_item),
    ),

    _omega_item: $ => choice(
      $.omega_init,
      $.block_spec,
      $.diagonal_spec,
      $.same_option,
      $.structure_option,
    ),

    omega_init: $ => seq(
      field('value', choice($.number, seq('(', $.number, optional($.fix_option), ')'))),
      optional(field('fixed', $.fix_option)),
    ),

    sigma_record: $ => seq(
      alias(recordKeyword('SIG', 'SIGM', 'SIGMA'), $.record_keyword),
      repeat($._sigma_item),
    ),

    _sigma_item: $ => choice(
      $.sigma_init,
      $.block_spec,
      $.diagonal_spec,
      $.same_option,
      $.structure_option,
    ),

    sigma_init: $ => seq(
      field('value', choice($.number, seq('(', $.number, optional($.fix_option), ')'))),
      optional(field('fixed', $.fix_option)),
    ),

    estimation_record: $ => seq(
      alias(recordKeyword('EST', 'ESTI', 'ESTIM', 'ESTIMATION'), $.record_keyword),
      repeat($._estimation_option),
    ),

    _estimation_option: $ => choice(
      $.method_option,
      $.maxeval_option,
      $.print_option,
      $.noabort_option,
      $.posthoc_option,
      $.interaction_option,
      $.laplacian_option,
      $.niter_option,
      $.nburn_option,
      $.isample_option,
      $.sig_option,
      $.sigl_option,
      $.sigdig_option,
      $.nsig_option,
      $.like_option,
      $.numerical_option,
      $.slow_option,
      $.nothetaboundtest_option,
      $.noomegaboundtest_option,
      $.nosigmaboundtest_option,
      $.eonly_option,
      $.seed_option,
      $.ctype_option,
      $.citer_option,
      $.calpha_option,
      $.msfo_option,
      $.mceta_option,
      $.twoll_option,
      $.nointer_option,
      $.format_option,
      $.auto_option,
      $.mapiter_option,
      $.file_option,
      $.fnleta_option,
      $.atol_option,
      $.rtol_option,
      $.centering_option,
      $.etabar_option,
      $.df_option,
    ),

    msfo_option: $ => seq(alias(/MSFO/i, $.option_name), optional('='), $.filename),
    mceta_option: $ => seq(alias(/MCETA/i, $.option_name), optional('='), $.integer),
    twoll_option: $ => /-2LL/i,
    auto_option: $ => seq(alias(/AUTO/i, $.option_name), optional('='), choice($.integer, $.identifier)),
    mapiter_option: $ => seq(alias(/MAPITER/i, $.option_name), optional('='), $.integer),

    method_option: $ => seq(alias(/(METHOD|METH)/i, $.option_name), optional('='), choice($.integer, /COND(ITIONAL)?/i, /SAEM/i, /IMP/i, /ITS/i, /BAYES/i)),
    maxeval_option: $ => seq(alias(/(MAX|MAXEVALS?)/i, $.option_name), optional('='), $.integer),
    print_option: $ => seq(alias(/PRINT/i, $.option_name), optional('='), choice($.integer, $.identifier)),
    noabort_option: $ => /(NOAB|NOABORT)/i,
    posthoc_option: $ => /POSTHOC/i,
    interaction_option: $ => /INTER(ACTION)?/i,
    nointer_option: $ => /NOINTER(ACTION)?/i,
    laplacian_option: $ => choice(/LAPLACE/i, /LAPLACIAN/i),
    niter_option: $ => seq(alias(/NITER/i, $.option_name), optional('='), $.integer),
    isample_option: $ => seq(alias(/ISAMPLE/i, $.option_name), optional('='), $.integer),
    sig_option: $ => seq(alias(/SIG/i, $.option_name), optional('='), $.integer),
    sigl_option: $ => seq(alias(/SIGL/i, $.option_name), optional('='), $.integer),
    sigdig_option: $ => seq(alias(/SIGDIG(ITS)?/i, $.option_name), optional('='), $.integer),
    nsig_option: $ => seq(alias(/NSIG/i, $.option_name), optional('='), $.integer),
    like_option: $ => /LIKE/i,
    numerical_option: $ => /NUMERICAL/i,
    eonly_option: $ => seq(alias(/EONLY/i, $.option_name), optional('='), $.integer),
    fnleta_option: $ => seq(alias(/FNLETA/i, $.option_name), optional('='), $.integer),
    atol_option: $ => seq(alias(/ATOL/i, $.option_name), optional('='), $.number),
    rtol_option: $ => seq(alias(/RTOL/i, $.option_name), optional('='), $.number),
    centering_option: $ => choice(/CENTERING/i, /CENTER/i),
    etabar_option: $ => /ETABAR/i,
    df_option: $ => seq(alias(/DF/i, $.option_name), optional('='), $.integer),

    covariance_record: $ => seq(
      alias(recordKeyword('COV', 'COVA', 'COVAR', 'COVARIANCE'), $.record_keyword),
      repeat($._covariance_option),
    ),

    _covariance_option: $ => choice(
      $.print_option,
      $.unconditional_option,
      $.matrix_option,
      $.sigl_option,
      $.tol_option,
      $.special_option,
      $.slow_option,
      $.noslow_option,
      $.compress_option,
    ),

    unconditional_option: $ => /UNCONDITIONAL/i,
    matrix_option: $ => seq(alias(/MATRIX/i, $.option_name), optional('='), $.identifier),
    compress_option: $ => /COMPRESS/i,

    table_record: $ => seq(
      alias(recordKeyword('TAB', 'TABL', 'TABLE'), $.record_keyword),
      repeat($._table_item),
    ),

    _table_item: $ => choice(
      $.table_column,
      $.file_option,
      $.noprint_option,
      $.oneheader_option,
      $.noappend_option,
      $.firstreconly_option,
      $.format_option,
      $.forward_option,
      $.append_option,
      $.conditional_option,
      $.esample_option,
      $.seed_option,
      $.wreschol_option,
    ),

    table_column: $ => choice(
      $.identifier,
      $.eta_ref,
      $.eps_ref,
      $.eta_range,
    ),

    file_option: $ => seq(alias(/FILE/i, $.option_name), optional('='), $.filename),
    simulation_record: $ => seq(
      alias(recordKeyword('SIM', 'SIMU', 'SIMULATION'), $.record_keyword),
      repeat($._simulation_option),
    ),

    sizes_record: $ => seq(
      alias(recordKeyword('SIZ', 'SIZE', 'SIZES'), $.record_keyword),
      repeat($.sizes_setting),
    ),

    sizes_setting: $ => seq(
      field('name', alias(/[A-Z][A-Z0-9]*/i, $.identifier)),
      '=',
      field('value', $.integer),
    ),

    mix_record: $ => seq(
      alias(recordKeyword('MIX'), $.record_keyword),
      repeat($._statement),
    ),

    prior_record: $ => seq(
      alias(recordKeyword('PRI', 'PRIO', 'PRIOR'), $.record_keyword),
      repeat($._prior_option),
    ),

    _prior_option: $ => choice(
      $.nwpri_option,
      $.tnpri_option,
      $.ntheta_option,
      $.neta_option,
      $.nthp_option,
      $.netp_option,
      $.plev_option,
      $.ivar_option,
    ),

    nwpri_option: $ => /NWPRI/i,
    scatter_record: $ => seq(
      alias(recordKeyword('SCAT', 'SCATTER', 'SCATTERPLOT'), $.record_keyword),
      repeat($.identifier),
    ),

    _simulation_option: $ => choice(
      $.sim_seed,
      $.onlysim_option,
      $.subproblems_option,
      $.true_option,
    ),

    sim_seed: $ => seq('(', field('value', $.integer), repeat($.sim_seed_option), ')'),
    sim_seed_option: $ => choice(
      /UNIFORM/i,
      /NORMAL/i,
      /NEW/i,
    ),
    onlysim_option: $ => /ONLYSIM(ULATION)?/i,
    subproblems_option: $ => seq(alias(/SUBPROBLEMS?/i, $.option_name), optional('='), $.integer),
    true_option: $ => seq(alias(/TRUE/i, $.option_name), optional('='), /FINAL|PRIOR|INITIAL/i),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,
    filename: $ => /[A-Za-z0-9_.\-\/\\:~]+/,
